Fix "double border" under the last type option
It appears when you scroll down the list of type choices and the bottom
of the last border is flush with the border of the list.

--- a/mathesar_ui/src/sections/table-view/header/Header.scss
+++ b/mathesar_ui/src/sections/table-view/header/Header.scss
@@ -90,7 +90,9 @@
       overflow: auto;
 
       li {
-        border-bottom: 1px solid #d2d2d2;
+        &:not(:last-child) {
+          border-bottom: 1px solid #d2d2d2;
+        }
 
         button {
           width: 100%;
